--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "jsondir": "^0.1.3",
     "lodash": "^4.5.0",
     "marked": "^0.3.5",
+    "nunjucks": "^2.3.0",
     "q": "^1.4.1",
     "request": "^2.67.0",
-    "swig": "^1.4.2",
     "syntax": "^1.1.0"
   },
   "devDependencies": {
